# linkedin_prediction

./: .gitignore  Readme.md  config.py  preprocessing.py  pyproject.toml  requirements.txt  train.py
conf/: config.yaml
conf/criterion/: default.yaml
conf/cross_validation/: default.yaml
conf/experiments/: default.yaml
conf/models/: default.yaml
conf/optimizer/: default.yaml
conf/paths/: default.yaml
conf/preprocessing/: default.yaml
conf/reproducibility/: default.yaml
conf/scheduler/: default.yaml
dataset/: dataset.py
documentation/: EDA.md  categories  data.md
models/: classifier.py  custom_bert.py  data_fusion.py
runner/: runner.py
utils/: constraints.py  utils.py
